# githree

./: .gitignore  .gitlab-ci.yml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTION_LICENSE.md  Dockerfile  LICENSE  README.md  SECURITY.md  SUPPORT.md  docker-compose.yml  install.sh
.github/: dependabot.yml
.github/workflows/: codeql.yml  container-publish.yml
backend/: Cargo.toml
backend/src/: config.rs  error.rs  lib.rs  main.rs  registry.rs  router.rs  state.rs
backend/src/git/: archive.rs  browse.rs  clone.rs  mod.rs  refs.rs
backend/src/handlers/: archive.rs  blob.rs  commits.rs  languages.rs  mod.rs  refs.rs  repos.rs  sync.rs  tree.rs
backend/tests/: api_endpoints.rs  api_fetch_on_request.rs  config_registry_error_utils.rs  git_core.rs  router_static.rs
backend/tests/common/: mod.rs
config/: Caddyfile  default.toml
frontend/: package.json  tailwind.config.ts
frontend/src/: app.css  app.html
frontend/src/lib/: api.ts  error-codes.ts  markdown.ts  time.ts  types.ts
frontend/src/lib/components/: BlobViewer.svelte  BranchSelector.svelte  Breadcrumb.svelte  CommitLog.svelte  FileTree.svelte  RepoCard.svelte  ShimmerRows.svelte  SourceLogo.svelte  ToastStack.svelte
frontend/src/routes/: +error.svelte  +layout.svelte  +page.svelte
frontend/src/routes/[repo]/: +page.svelte  +page.ts
frontend/src/routes/[repo]/branches/: +page.svelte
frontend/src/routes/[repo]/commits/: +page.svelte
frontend/src/routes/errors/: +page.svelte
scripts/: dev-services.sh
tools/githreectl/: Cargo.toml
tools/githreectl/src/: main.rs
(+6 files in other folders)
