[package]
name = "githree"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
config = "0.15"
fd-lock = "4"
flate2 = "1"
futures-util = "0.3"
git2 = "0.20"
infer = "0.19"
mime_guess = "2"
moka = { version = "0.12", features = ["future"] }
reqwest = { version = "0.13", default-features = false, features = ["rustls", "webpki-roots"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2"
zip = { version = "8", default-features = false, features = ["deflate"] }

[dev-dependencies]
axum-test = "20"
